--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /bin
 /.settings
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+/build
+/.classpath
+/.project
