--- a/app/.project
+++ b/app/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProyectoPokemon</name>
-	<comment></comment>
+	<name>app</name>
+	<comment>Project app created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -22,7 +22,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1744309464124</id>
+			<id>1745373624025</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
